update Attribute & Metadata  saves/deletes based on new system